	Fixed: Literal percent sign must be escaped with another percent sign in translation strings
	Fixed: PHP Notice - Undefined variable $resellerId in reseller/alias.php
	Fixed: SQL user hosts must be separated from SQL users to avoid any customer confusion
	Fixed: Security issue - Input data for software instances are not validated correctly (Software Installer)

INSTALLER
	Fixed: Error about unknown IP when attempting to add new IP
	Fixed: lo must not be used as default device when adding new IP (installer)
	Fixed: Unable to upgrade to 1.1.14 (packages file is corrupted - Ubuntu Precise)

PLUGINS
	Fixed: Configuration change not processed when a plugin is being updated
	Fixed: Errors not catched on change when the __need_change__ flag is set
	Updated: Plugin API to version 0.2.12

TICKETS
	Fixed #1143: Bug - Domain deactivation - Hard/Soft mail accounts suspension

------------------------------------------------------------------------------------------------------------------------
1.1.14
------------------------------------------------------------------------------------------------------------------------

2014-09-15: Laurent Declercq
	RELEASE i-MSCP 1.1.14

DAEMON
	Fixed: Wrong version in 'helo' answer string

ENGINE
	Deprecated: Usage of iMSCP::HooksManager package is now deprecated and will be removed in later version
	Fixed: autoinstaller::Functions::doImscpBackup: Name "main::execmode" used only once...
	Fixed: Undefined value in tracker hash (vlogger)
	Renamed: iMSCP::HooksManager to iMSCP::EventManager (iMSCP::HooksManager is now an alias of iMSCP::EventManager)

GUI
	Fixed: Malformed href attributes in alias.php (reseller level)
	Fixed: Malformed href attribute in ticket_system.tpl (admin/reseller levels)
	Fixed: Unable to add custom CNAME DNS resource record using the arobase symbol which is substituted by the zone root
	Updated: Layout according changes from vendor libraries

INSTALLER